components/nvidia-gpu-operator/base/cluster-clusterpolicy-gpu-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: gpu-cluster-policy
spec:
  daemonsets: {}
  dcgm: {}
  dcgmExporter:
    serviceMonitor:
      enabled: true
  devicePlugin:
    config:
      default: no-time-slicing
      name: time-slicing-config
  driver:
    enabled: true
  gfd: {}
  nodeStatusExporter:
    enabled: true
  operator: {}
  toolkit: {}
